# root-pkg-ws

./: Cargo.toml  build.rs  rust-toolchain.toml
src/: main.rs
test/local_package/: Cargo.toml
test/local_package/src/: lib.rs
test/local_registry/: config.json
test/sample_dependencies_pkg/: Cargo.toml
